--- a/src/components/NotificationPanel/NotificationPanel.scss
+++ b/src/components/NotificationPanel/NotificationPanel.scss
@@ -40,6 +40,9 @@
     }
 
     &__panel {
+        position: fixed;
+        top: 0;
+        left: 0;
         z-index: 9999;
         width: min(420px, 80vw);
         background: var(--card-background-color);
